# LSTG-Evo-External

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  headerlibs.cpp
.github/workflows/: cmake-multi-platform.yml  compile-deps-stage-1.yml  compile-deps-stage-2.yml  compile-deps-stage-full.yml  compile-deps.yml
cmake/: DXShader.patch  SDL_shadercross.patch  TargetCommonOptions.cmake  architecture.cmake  glslang.patch  packages.cpm.cmake  packages.gfx.cmake  packages.lua.cmake  packages.shader.cmake  packages.xiph.cmake  packages.z.cmake  tgt-common.cmake  xxhash.patch
cmake/toolchain/: Linux-arm64.cmake  Linux-x86_64.cmake  Windows-arm64-msvc.cmake  Windows-arm64.cmake  Windows-x86_64.cmake  macOS-arm64.cmake  macOS-x86_64.cmake
imgui/: imgui_freetype.cpp  imgui_rect_pack.cpp  lstg_imconfig.h
imgui/binding/src/: lua_imgui_ImGui.cpp  lua_imgui_ImGui_register.inl  lua_imgui_enum.cpp  lua_imgui_type.cpp
miniaudio/: miniaudio.c  minivorbis.h
steam_api/: CMakeLists.txt
steam_api/SteamworksSDK/sdk/: Download.txt
